# android-client-api

./: .gitignore  CHANGELOG.md  README.md  build.gradle  gradle.properties  settings.gradle  test.sh  versioning.gradle
.github/workflows/: release.yml
cmake/: CMakeLists.txt  javah.sh
cmake/java-wrapper/: CMakeLists.txt
nabto-api/: build.gradle
nabto-api/src/main/java/com/nabto/api/: NabtoCApiWrapper.java  NabtoClient.java  NabtoConnectionType.java  NabtoStatus.java  Stream.java  Tunnel.java  TunnelInfoResult.java  UrlResult.java
scripts/: build-aar-package.sh
src/androidTest/: AndroidManifest.xml
src/androidTest/java/: MyAndroidTest.java
src/androidTest/java/com/nabto/api/: NabtoApiTest.java  NabtoApiTestStarted.java
src/main/: AndroidManifest.xml
src/main/assets/: README.md
src/main/java/com/nabto/api/: NabtoAndroidAssetManager.java  NabtoApi.java  NabtoAssetManager.java  NabtoCApiWrapper.java  NabtoClient.java  NabtoDefaultAssetManager.java  NabtoStatus.java  NabtoStreamOption.java  NabtoTunnelState.java  RpcResult.java  Session.java  Stream.java  StreamReadResult.java  Tunnel.java  TunnelInfoResult.java
src/main/jniJava/com/nabto/api/: NabtoStatus.java
src/main/jniLibs/: README.md  jni_byte_array.hpp  jni_string.hpp  nabto_client_api.h  nabto_client_api.hpp  nabto_client_api_jni.cpp
src/test/java/: NabtoCApiWrapperTest.java
src/test/java/com/nabto/api/: NabtoApiTest.java  NabtoAssetManagerTest.java  NabtoCApiWrapperStubController.java  NabtoCApiWrapperStubControllerTest.java  NabtoCApiWrapperTest.java
src/test/jniLibs/: nabto_client_api_stub.cpp  nabto_client_api_stub_controller_jni.cpp
src/test/jniLibs/nabto_client_api_jni_stub/: CMakeLists.txt  nabto_client_api_jni.c  nabto_client_api_stub.cpp  nabto_client_api_stub_controller_jni.cpp
src/unused_jni_integration_tests/jniLibs/: nabto_client_api_stub.cpp  nabto_client_api_stub_controller.hpp
